--- a/swagger-brake-cli/build.gradle
+++ b/swagger-brake-cli/build.gradle
@@ -1,11 +1,10 @@
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
         gradlePluginPortal()
     }
     dependencies {
-        classpath "com.github.johnrengelman:shadow:8.1.1"
+        classpath("com.gradleup.shadow:shadow-gradle-plugin:9.2.2")
     }
 }
 
@@ -13,7 +12,7 @@ repositories {
     mavenCentral()
 }
 
-apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'com.gradleup.shadow'
 
 dependencies {
     implementation project(":swagger-brake")
