--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ subprojects {
         compileOnly "org.projectlombok:lombok:1.18.42"
         annotationProcessor "org.projectlombok:lombok:1.18.42"
 
+        implementation 'io.projectreactor:reactor-core:3.7.12'
+
         implementation 'com.google.guava:guava:33.5.0-jre'
         implementation "org.apache.commons:commons-collections4:4.5.0"
         implementation "org.apache.commons:commons-lang3:3.19.0"
